--- a/css/css.css
+++ b/css/css.css
@@ -15,17 +15,21 @@ input[type='text'],input[type='file'],input[type='password'],textarea,.button
 	border:none;
 	font:Open Sans,'微軟正黑體';
 	font-weight:600;
+	margin:5px 0; /*自行加上的*/
 }
 input[type='button'],input[type='submit'],input[type='reset'],button,.button
 {
-	min-width:70px;
-	min-height:40px;
+	
+	
 	background:#000;
 	color:#fff;
 	border:none;
 	cursor:pointer;
-	font-size:18px;
+	font-size:16px;
 	text-decoration:none;
+	padding: 3px 8px;
+	border-radius: 6px;
+	margin: 0 3px;
 }
 input[type='button']:hover,input[type='submit']:hover,input[type='reset']:hover,button:hover,.button:hover
 {
